# C_HTTP_SERVER

./: .gitignore  CMakeLists.txt  readme.md
includes/: app_config.h  cli.h  client_request_handler.h  config.h  http-response.h  http_request_parser.h  http_response_handler.h  logger.h  memory_utils.h  router.h  server.h  static_serving_handler.h  str_utils.h
src/: main.c
src/core/: app_config.c  cli.c  config.h  logger.c  router.c  server.c
src/handlers/: client_request_handler.c  http_response_handler.c  static_serving_handler.c
src/http/: http-response.c  http_request_parser.c
src/utils/: memory_utils.c  str_utils.c
